SLING-13050 add sling launcher